<resources>
    <string name="app_name">NugasKuy</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="landing_login_siswa">Masuk sebagai siswa</string>
    <string name="landing_login_mentor">Masuk sebagai mentor</string>

    <!--PAGE MENTORING-->
    <string name="main_greeting">Halo,\nSobat NUGAS</string>
    <string name="main_greeting2">Kamu lagi mau belajar apa, nih?</string>
    <string name="matpel_matematika">Matematika</string>
    <string name="matpel_fisika">Fisika</string>
    <string name="matpel_kimia">Kimia</string>

    <!--PAGE PENGGUNA-->
    <string name="detailclass_modul">Modul</string>
    <string name="detailclass_data_modul">Persamaan Nilai Mutlak</string>
    <string name="detailclass_jadwal_sesi">Jadwal Sesi</string>
    <string name="detailclass_data_jadwal">Jumat, 19 Mei (15.00 - 17.00 WIB)</string>
    <string name="detailclass_mentor">Mentor</string>
    <string name="ilustrasi_banner">ilustrasi banner</string>
    <string name="btn_scan_soal">Scan Soal</string>
    <string name="teman_ai_capt">Butuh bantuan ngerjain soal?\nSantai, teman AI siap bantu!</string>
    <string name="btn_to_scan_soal">Mulai gunakan</string>
    <string name="capture_needed">Waduh, kamu belum ambil gambar!</string>

</resources>