<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/mentoring_header_banner"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/mentoring_header_banner_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling">

            <ImageView
                android:id="@+id/ilustrasi_main"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginEnd="-25dp"
                android:contentDescription="@string/ilustrasi_banner"
                android:src="@drawable/ic_launcher_tugas_png"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/main_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/main_greeting"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/main_greeting2"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/main_greeting2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="45dp"
                android:text="@string/main_greeting2"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppinsregular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/main_greeting" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2">

        <Button
            android:id="@+id/matpel_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/mentoring_button_matpel"
            android:text="@string/matpel_matematika"
            android:textAllCaps="false"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="20sp"
            android:textAlignment="center"
            android:elevation="0dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/matpel_matematika" />

        <Button
            android:id="@+id/matpel_2"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/mentoring_button_matpel"
            android:text="@string/matpel_fisika"
            android:textAllCaps="false"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="20sp"
            android:textAlignment="center"
            android:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/matpel_1"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/matpel_fisika" />

        <Button
            android:id="@+id/matpel_3"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/mentoring_button_matpel"
            android:text="@string/matpel_kimia"
            android:textAllCaps="false"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="20sp"
            android:textAlignment="center"
            android:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/matpel_2"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/matpel_kimia" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>